--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "@types/w3c-web-serial": "^1.0.2",
+    "@types/wicg-file-system-access": "^2020.9.5",
+    "ansi-to-html": "^0.7.2",
+    "async-mutex": "^0.3.2",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web-esptool": "github:mtsmfm/web-esptool"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
